# sedona-db

./: .asf.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  compose.yml  mkdocs.yml
c/: .gitignore  CMakeLists.txt  CMakePresets.json
c/sedona-extension/: Cargo.toml
c/sedona-extension/src/: extension.rs  lib.rs  scalar_kernel.rs
c/sedona-gdal/: Cargo.toml
c/sedona-gdal/src/: config.rs  cpl.rs  dataset.rs  driver.rs  dyn_load.rs  errors.rs  gdal.rs  gdal_api.rs  gdal_dyn_bindgen.rs  geo_transform.rs  global.rs  lib.rs  mem.rs  raster.rs  spatial_ref.rs  vector.rs  vrt.rs  vsi.rs
c/sedona-geoarrow-c/: .gitattributes  CMakeLists.txt  Cargo.toml  build.rs  vendor-geoarrow.sh  vendor-nanoarrow.sh
c/sedona-geoarrow-c/benches/: geoarrow_c-functions.rs  geoarrow_c.rs
c/sedona-geoarrow-c/src/: error.rs  geoarrow_c.rs  geoarrow_c_bindgen.rs  kernels.rs  lib.rs  register.rs
c/sedona-geos/: Cargo.toml
c/sedona-geos/benches/: geos-functions.rs  wkb_to_geos.rs
c/sedona-geos/src/: binary_predicates.rs  distance.rs  executor.rs  geos.rs  geos_to_wkb.rs  lib.rs  overlay.rs  register.rs  st_area.rs  st_boundary.rs  st_buffer.rs  st_centroid.rs  st_concavehull.rs  st_convexhull.rs  st_dwithin.rs  st_intersection.rs  st_intersects.rs  st_isring.rs  st_issimple.rs  st_isvalid.rs  st_isvalidreason.rs  st_length.rs  st_line_merge.rs  st_makevalid.rs  st_minimumclearance.rs  st_minimumclearance_line.rs  st_nrings.rs  st_numinteriorrings.rs  st_numpoints.rs  st_perimeter.rs  st_polygonize.rs  st_polygonize_agg.rs  st_relate.rs  st_reverse.rs  st_simplify.rs  st_simplifypreservetopology.rs  st_snap.rs  st_unaryunion.rs  wkb_to_geos.rs
c/sedona-libgpuspatial/: CMakeLists.txt  Cargo.toml  build.rs
c/sedona-libgpuspatial/libgpuspatial/: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  SOURCE.md  gpuspatialConfig.cmake.in  vcpkg.json
c/sedona-libgpuspatial/src/: error.rs  lib.rs  libgpuspatial.rs  libgpuspatial_glue_bindgen.rs
c/sedona-proj/: Cargo.toml  README.md  build.rs
c/sedona-proj/benches/: proj-functions.rs
c/sedona-proj/src/: dyn_load.rs  error.rs  lib.rs  proj.rs  proj_dyn.c  proj_dyn.h  proj_dyn_bindgen.rs  register.rs  sd_order_lnglat.rs  st_transform.rs  transform.rs
c/sedona-s2geography/: CMakeLists.txt  Cargo.toml  build.rs  vcpkg.json
c/sedona-s2geography/benches/: s2geography-functions.rs
c/sedona-s2geography/src/: error.rs  geography.rs  geography_glue.cc  geography_glue.h  geography_glue_bindgen.rs  kernels.rs  lib.rs  operator.rs  rect_bounder.rs  register.rs  s2geography.rs  s2geography_c_bindgen.rs  scalar_kernel.rs  utils.rs
c/sedona-s2geography/tests/: mod.rs
c/sedona-tg/: .gitattributes  Cargo.toml  README.md  build.rs  vendor-tg.sh
c/sedona-tg/benches/: geo-predicates.rs  parse-wkb.rs  tg-functions.rs
c/sedona-tg/src/: binary_predicate.rs  error.rs  executor.rs  lib.rs  register.rs  tg.rs  tg_bindgen.rs
python/sedona-rs/: Cargo.toml  pyproject.toml
python/sedona-rs/src/: context.rs  dataframe.rs  error.rs  lib.rs
python/sedona-rs/tests/: conftest.py  test_context.py  test_dataframe.py  test_dbapi.py
python/sedonadb/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/sedonadb/src/: context.rs  dataframe.rs  datasource.rs  error.rs  import_from.rs  lib.rs  reader.rs  runtime.rs  schema.rs  udf.rs
python/sedonadb/tests/: conftest.py  test_context.py  test_dataframe.py  test_datasource.py  test_dbapi.py  test_functions.py  test_gdal.py  test_knnjoin.py  test_sjoin.py  test_sjoin_gpu.py  test_testing.py  test_udf.py
rust/sedona-adbc/: Cargo.toml
rust/sedona-adbc/src/: connection.rs  database.rs  driver.rs  lib.rs  reader.rs  statement.rs  utils.rs
rust/sedona-common/: Cargo.toml
rust/sedona-common/src/: error.rs  lib.rs  option.rs
rust/sedona-datafusion/: Cargo.toml
rust/sedona-datafusion/src/: optimizer.rs
rust/sedona-expr/: Cargo.toml
rust/sedona-expr/src/: aggregate_udf.rs  function_set.rs  item_crs.rs  lib.rs  projection.rs  scalar_udf.rs  spatial_filter.rs  statistics.rs  udf.rs  utils.rs
rust/sedona-functions/: Cargo.toml
rust/sedona-functions/benches/: constructors.rs  exporters.rs  native-functions.rs
rust/sedona-functions/src/: barrier.rs  distance.rs  executor.rs  geo_iterator.rs  iter_geo_traits.rs  lib.rs  overlay.rs  predicates.rs  referencing.rs  register.rs  sd_format.rs  sd_order.rs  st_affine.rs  st_affine_helpers.rs  st_analyze_agg.rs  st_analyze_aggr.rs  st_area.rs  st_asbinary.rs  st_asgeojson.rs  st_astext.rs  st_azimuth.rs  st_buffer.rs  st_centroid.rs  st_collect.rs  st_collect_agg.rs  st_concavehull.rs  st_dimension.rs  st_dump.rs  st_dwithin.rs  st_envelope.rs  st_envelope_agg.rs  st_envelope_aggr.rs  st_flipcoordinates.rs  st_geometryn.rs  st_geometrytype.rs  st_geomfromwkb.rs  st_geomfromwkt.rs  st_haszm.rs  st_interiorringn.rs  st_intersection_agg.rs  (+30 more)
rust/sedona-geo/: Cargo.toml
rust/sedona-geo-generic-alg/: Cargo.toml  README.md
rust/sedona-geo-generic-alg/benches/: area.rs  centroid.rs  distance.rs  intersection.rs  length.rs  perimeter.rs
rust/sedona-geo-generic-alg/src/: geometry.rs  lib.rs  utils.rs
rust/sedona-geo-traits-ext/: Cargo.toml  README.md
rust/sedona-geo-traits-ext/src/: coord.rs  geometry.rs  geometry_collection.rs  lib.rs  line.rs  line_string.rs  multi_line_string.rs  multi_point.rs  multi_polygon.rs  point.rs  polygon.rs  rect.rs  triangle.rs  type_tag.rs  wkb_ext.rs
rust/sedona-geo/src/: centroid.rs  (+20 more)
rust/sedona-geometry/: Cargo.toml
rust/sedona-geoparquet/: Cargo.toml
rust/sedona-pointcloud/: Cargo.toml
rust/sedona-proj/: Cargo.toml
rust/sedona-raster-functions/: Cargo.toml
rust/sedona-schema/: Cargo.toml
rust/sedona-spatial-join/: Cargo.toml
rust/sedona-spatial-join-gpu/: Cargo.toml  README.md
rust/sedona-testing/: Cargo.toml
sedona-cli/: .gitignore  Cargo.toml  README.md  init-datafusion-cli.sh
sedona-cli/src/: command.rs  exec.rs  functions.rs  helper.rs  lib.rs  main.rs  print_format.rs  print_options.rs
(+619 files in other folders)
