# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
[workspace]
members = [
    "c/sedona-extension",
    "c/sedona-geoarrow-c",
    "c/sedona-geos",
    "c/sedona-libgpuspatial",
    "c/sedona-proj",
    "c/sedona-s2geography",
    "c/sedona-tg",
    "python/sedonadb",
    "r/sedonadb/src/rust",
    "rust/sedona-adbc",
    "rust/sedona-datasource",
    "rust/sedona-expr",
    "rust/sedona-functions",
    "rust/sedona-geo-generic-alg",
    "rust/sedona-geo-traits-ext",
    "rust/sedona-geo",
    "rust/sedona-geometry",
    "rust/sedona-geoparquet",
    "rust/sedona-raster",
    "rust/sedona-raster-functions",
    "rust/sedona-schema",
    "rust/sedona-spatial-join",
    "rust/sedona-testing",
    "rust/sedona",
    "sedona-cli",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
authors = ["Apache Sedona <dev@sedona.apache.org>"]
license = "Apache-2.0"
homepage = "https://github.com/apache/sedona-db"
repository = "https://github.com/apache/sedona-db"
description = "Apache SedonaDB Rust API"
readme = "README.md"
edition = "2021"

# Same rust-version, arrow, and datafusion dependencies as datafusion-comet
# https://github.com/apache/datafusion-comet/blob/main/native/Cargo.toml
rust-version = "1.86"

[workspace.dependencies]
approx = "0.5"
abi_stable = "0.11.3"
adbc_core = ">=0.21.0"
adbc_ffi = ">=0.21.0"
lru = "0.12"
arrow = { version = "56.0.0", features = ["prettyprint", "ffi", "chrono-tz"] }
arrow-array = { version = "56.0.0" }
arrow-cast = { version = "56.0.0" }
arrow-data = { version = "56.0.0" }
arrow-json = { version = "56.0.0" }
arrow-schema = { version = "56.0.0" }
arrow-buffer = { version = "56.0.0" }
async-trait = { version = "0.1.87" }
bytes = "1.10"
byteorder = "1"
chrono = { version = "0.4.38", default-features = false }
comfy-table = { version = "7.1.4" }
criterion = { version = "0.8", features = ["html_reports"] }
datafusion = { version = "50.2.0", default-features = false }
datafusion-catalog = { version = "50.2.0" }
datafusion-common = { version = "50.2.0", default-features = false }
datafusion-common-runtime = { version = "50.2.0", default-features = false }
datafusion-datasource-parquet = { version = "50.2.0" }
datafusion-execution = { version = "50.2.0", default-features = false }
datafusion-expr = { version = "50.2.0" }
datafusion-ffi = {  version = "50.2.0" }
datafusion-physical-expr = { version = "50.2.0" }
datafusion-physical-plan = { version = "50.2.0" }
dirs = "6.0.0"
env_logger = "0.11"
fastrand = "2.0"
futures = { version = "0.3" }
object_store = { version = "0.12.0", default-features = false }
float_next_after = "1"
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
mimalloc = { version = "0.1", default-features = false }
libmimalloc-sys = { version = "0.1", default-features = false }
once_cell = "1.20"

geos = { version = "10.0.0", features = ["geo", "v3_10_0"] }

geo-types = "0.7.17"
geo-traits = "0.3.0"
geo = "0.31.0"

geo-index = { version = "0.3.2", features = ["use-geo_0_31"] }

wkb = "0.9.2"
wkt = "0.14.0"

parking_lot = "0.12"
parquet = { version = "56.0.0", default-features = false, features = [
    "arrow",
    "async",
    "object_store",
] }
rand = "0.8"
regex = "1.8"
rstest = "0.26.1"
serde = { version = "1" }
serde_json = { version = "1" }
serde_with = { version = "1" }
tempfile = { version = "3"}
thiserror = { version = "2" }
tokio = { version = "1.44" }
url = "2.5.4"

# Workspace path dependencies for internal crates
sedona = { version = "0.3.0", path = "rust/sedona" }
sedona-adbc = { version = "0.3.0", path = "rust/sedona-adbc" }
sedona-common = { version = "0.3.0", path = "rust/sedona-common" }
sedona-datasource = { version = "0.3.0", path = "rust/sedona-datasource" }
sedona-expr = { version = "0.3.0", path = "rust/sedona-expr" }
sedona-functions = { version = "0.3.0", path = "rust/sedona-functions" }
sedona-geo = { version = "0.3.0", path = "rust/sedona-geo" }
sedona-geo-generic-alg = { version = "0.3.0", path = "rust/sedona-geo-generic-alg" }
sedona-geo-traits-ext = { version = "0.3.0", path = "rust/sedona-geo-traits-ext" }
sedona-geometry = { version = "0.3.0", path = "rust/sedona-geometry" }
sedona-geoparquet = { version = "0.3.0", path = "rust/sedona-geoparquet" }
sedona-raster = { version = "0.3.0", path = "rust/sedona-raster" }
sedona-raster-functions = { version = "0.3.0", path = "rust/sedona-raster-functions" }
sedona-schema = { version = "0.3.0", path = "rust/sedona-schema" }
sedona-spatial-join = { version = "0.3.0", path = "rust/sedona-spatial-join" }
# sedona-testing is not published to crates.io, so it uses path-only in individual crates

# C wrapper crates
sedona-geoarrow-c = { version = "0.3.0", path = "c/sedona-geoarrow-c" }
sedona-geos = { version = "0.3.0", path = "c/sedona-geos" }
sedona-proj = { version = "0.3.0", path = "c/sedona-proj", default-features = false }
sedona-s2geography = { version = "0.3.0", path = "c/sedona-s2geography" }
sedona-tg = { version = "0.3.0", path = "c/sedona-tg" }
