# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "sedona-cli"
description = "Command Line Client for Sedona's DataFusion-based query engine."
readme = "README.md"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[lints.clippy]
result_large_err = "allow"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc", "dep:libmimalloc-sys"]
s2geography = ["sedona/s2geography"]

[dependencies]
arrow = { workspace = true }
async-trait = { workspace = true }
clap = { version = "4.5.30", features = ["derive", "cargo"] }
datafusion = { workspace = true, features = [
    "avro",
    "crypto_expressions",
    "datetime_expressions",
    "encoding_expressions",
    "nested_expressions",
    "parquet",
    "recursive_protection",
    "regex_expressions",
    "unicode_expressions",
    "compression",
] }
env_logger = { workspace = true }
futures = { workspace = true }
mimalloc = { workspace = true, optional = true }
libmimalloc-sys = { workspace = true, optional = true }
regex = { workspace = true }
rustyline = "15.0"
sedona = { path = "../rust/sedona", features = ["aws", "gcp", "http", "proj"] }
sedona-tg = { path = "../c/sedona-tg" }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot", "signal"] }
