# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
[package]
name = "sedona-libgpuspatial"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "GPU spatial operations wrapper for libgpuspatial"
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []
# Enable GPU acceleration (requires CUDA toolkit)
gpu = []

[build-dependencies]
bindgen = "0.72.1"
cmake = "0.1"
which = "8.0"

[dependencies]
arrow-array = { workspace = true, features = ["ffi"] }
arrow-schema = { workspace = true }
thiserror = { workspace = true }
log = "0.4"
sedona-schema = { path = "../../rust/sedona-schema" }

[dev-dependencies]
sedona-expr = { path = "../../rust/sedona-expr" }
sedona-geos = { path = "../sedona-geos" }
sedona-testing = { path = "../../rust/sedona-testing" }
