[package]
name = "sedona-proj"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[build-dependencies]
bindgen = "0.71.0"
cc = { version = "1" }

[dev-dependencies]
approx = { workspace = true }
geo-types = { workspace = true }
rstest = { workspace = true }
wkb = { workspace = true }
sedona-testing = { path = "../../rust/sedona-testing", features = ["criterion"] }
criterion = { workspace = true}

[features]
default = [ "proj-sys" ]
proj-sys = [ "dep:proj-sys" ]

[dependencies]
serde_json = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
geo-traits = { workspace = true }
proj-sys = { version = "0.26.0", optional = true }
sedona-expr = { path = "../../rust/sedona-expr" }
sedona-functions = { path = "../../rust/sedona-functions" }
sedona-geometry = { path = "../../rust/sedona-geometry" }
sedona-schema = { path = "../../rust/sedona-schema" }
thiserror = { workspace = true }
wkb = { workspace = true }

[[bench]]
name = "proj-functions"
harness = false
