# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
[package]
name = "sedona-proj"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[build-dependencies]
cc = { version = "1" }

[dev-dependencies]
approx = { workspace = true }
geo-types = { workspace = true }
rstest = { workspace = true }
wkb = { workspace = true }
sedona-testing = { path = "../../rust/sedona-testing", features = ["criterion"] }
criterion = { workspace = true}

[features]
default = [ "proj-sys" ]
proj-sys = [ "dep:proj-sys" ]

[dependencies]
serde_json = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
geo-traits = { workspace = true }
proj-sys = { version = "0.26.0", optional = true }
sedona-expr = { path = "../../rust/sedona-expr" }
sedona-functions = { path = "../../rust/sedona-functions" }
sedona-geometry = { path = "../../rust/sedona-geometry" }
sedona-schema = { path = "../../rust/sedona-schema" }
thiserror = { workspace = true }
wkb = { workspace = true }

[[bench]]
name = "proj-functions"
harness = false
